# WAF-EVASION-LAB

./: .env.example  .gitignore  Makefile  README.md  TODO.md  docker-compose.yml  paper.md  prompt.md
.claude/: settings.local.json
dashboard/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css  types.ts
dashboard/src/components/: VerdictBadge.tsx
dashboard/src/tabs/: CompareRuns.tsx  CrossWAF.tsx  HallOfFame.tsx  LiveRun.tsx  PayloadExplorer.tsx  Results.tsx
docs/: ADDING_MUTATORS.md  ADDING_PAYLOADS.md  ARCHITECTURE.md  DEV.md
engine/: Dockerfile  README.md  pyproject.toml
engine/src/wafeval/: __init__.py  __main__.py  cli.py  config.py  models.py  targets.yaml
engine/src/wafeval/analyzer/: __init__.py  aggregate.py  bypass.py  charts.py  combined.py  export.py  ladder.py  latency.py  paranoia.py
engine/src/wafeval/api/: __init__.py  __main__.py  app.py  store.py
engine/src/wafeval/mutators/: __init__.py  adaptive.py  base.py  context_displacement.py  encoding.py  lexical.py  multi_request.py  noop.py  structural.py
engine/src/wafeval/payloads/: __init__.py  benign.yaml  cmdi.yaml  crlf.yaml  graphql.yaml  jndi.yaml  ldap.yaml  lfi.yaml  loader.py  nosql.yaml  paper_subset.yaml  sqli.yaml  ssrf.yaml  ssti.yaml  xss.yaml  xxe.yaml
engine/src/wafeval/reporter/: __init__.py  _data.py  combined.py  consolidated.py  hall_of_fame.py  latex.py  markdown.py
engine/src/wafeval/runner/: __init__.py  engine.py  environment.py  session.py  verdict.py
engine/tests/: test_adaptive3_mutator.py  test_adaptive_mutator.py  test_analyzer.py  test_api.py  test_benign_fpr.py  test_combined.py  test_environment.py  test_hall_of_fame_dedup.py  test_header_safe.py  test_ladder.py  test_latency.py  test_lexical_mutator.py  test_mutators_phase4.py  test_noop_mutator.py  test_paranoia.py  test_payload_loader.py  test_reporter.py  test_session.py  test_verdict.py  test_waf_header_capture.py
routing/: README.md  traefik.yml
routing/dynamic/: routes.yml
scripts/: with-nix-libs
targets/: README.md
targets/dvwa/init/: init-dvwa.sh
tests/: _lib.sh  adaptive_evolution.sh  openappsec_ladder.sh  paranoia_ladder.sh  phase1.sh  phase2.sh  phase3.sh  phase4.sh  phase5.sh  phase6.sh  phase_paper.sh  shadowd_whitelist.sh
wafs/coraza/: Dockerfile  README.md  go.mod  main.go  main_test.go
wafs/modsecurity/: README.md
wafs/openappsec/: README.md
wafs/openappsec/localconfig/: local_policy.yaml
wafs/openappsec/nginx-config/: default.conf
wafs/shadowdaemon/: README.md
wafs/shadowdaemon/init/: bootstrap.sql  entrypoint.sh  whitelist-reset.sql  whitelist-seed.sql
wafs/shadowdaemon/proxy/: Dockerfile  proxy.py  requirements.txt
